compiler/typ/tests/fixtures/diagnostics/0320_fun_higher_order_callback_mismatch_08.ml.infer.expected
File "0320_fun_higher_order_callback_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0320_fun_higher_order_callback_mismatch_08 is not a valid module name.

File "0320_fun_higher_order_callback_mismatch_08.ml", line 2, characters 33-34:
2 | let _ = apply_theta (fun b -> if b then 7 else 8)
                                     ^
Error: The value b has type int but an expression was expected of type 
       bool because it is in the condition of an if-statement
